test/compile-fail/identifier/use-path-segment-keyword/top.rhdl
mod a {
    pub struct r#self {}
}
use a::r#self;
